applications/home-automation/zigbee2mqtt/resources/templates/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: zigbee2mqtt
spec:
  parentRefs:
    - name: gateway-internal
      namespace: networking
      sectionName: https
      group: gateway.networking.k8s.io
      kind: Gateway
  hostnames:
    - zigbee2mqtt.quido.me
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: zigbee2mqtt
          port: 8080
          weight: 1
          group: ""
          kind: Service
